Fix overflowing toasts

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -100,6 +100,7 @@ a, a:visited {
     text-align: center;
     width: fit-content;
     max-width: 500px;
+    overflow-wrap: break-word;
 }
 
 .toast.show {
